--- a/data/team.yml
+++ b/data/team.yml
@@ -23,6 +23,22 @@ members:
 
       You can find him on [Linkedin](https://linkedin.com/in/bastichelaar) and [Twitter](https://twitter.com/bastichelaar).
   - category: Management
+    image: "basvanderzwet.jpg"
+    name: Bas van der Zwet
+    teaser: >
+      Co-founder and advisor
+    description: >
+      Next to his daily job at [Dataworkz](https://dataworkz.nl) as a Managing Director, Bas is an advisor
+      to Skyworkz. With his strong
+      company.
+      
+
+      In his spare time, Martin is a fanatic board gamer. You can see him regularly on board game nights
+      in Utrecht.
+
+
+      You can find him on [Linkedin](https://linkedin.com/in/martin-weidner-b52455).
+  - category: Management
     image: "martin.jpg"
     name: Martin Weidner
     teaser: >
