--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "github-syntax-light": "^0.5.0",
     "ionicons": "^4.5.8",
     "lightbox2": "^2.11.1",
+    "lodash": ">=4.17.13",
+    "mixin-deep": ">=1.3.2",
     "normalize.css": "^8.0.1",
     "owl.carousel2": "^2.2.1",
     "postcss-cli": "^6.1.2",
     "postcss-remove-unused-css": "^1.0.4",
     "postcss-uncss": "^0.16.1",
     "scss-powertools": "^1.1.0",
+    "set-value": ">=2.0.1",
     "uncss": "^0.16.2",
     "url-loader": "^1.1.2",
-    "venobox": "^1.8.5",
-    "set-value": ">=2.0.1",
-    "mixin-deep": ">=1.3.2",
-    "lodash": ">=4.17.13"
+    "venobox": "^1.8.5"
   }
 }
