--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
+    "critical": "^1.3.9",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "fstream": ">=1.0.12",
@@ -36,7 +37,6 @@
     "scss-powertools": "^1.2.1",
     "serialize-javascript": ">=2.1.1",
     "set-value": ">=2.0.1",
-    "serialize-javascript": ">=2.1.1",
     "uncss": "^0.16.2",
     "url-loader": "^1.1.2",
     "venobox": "^1.8.5"
