--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
+    "critical": "^1.3.9",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "fstream": ">=1.0.12",
