--- a/package.json
+++ b/package.json
@@ -9,38 +9,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "popper.js": "^1.15.0",
-    "webpack": "^4.43.0"
+    "popper.js": "^1.16.1",
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
-    "@fullcalendar/core": "^4.1.0",
-    "@fullcalendar/daygrid": "^4.1.0",
-    "@fullhuman/postcss-purgecss": "^1.2.0",
-    "animate.css": "^3.7.0",
-    "bootstrap": "^4.3.1",
-    "critical": "^1.3.9",
+    "@fullcalendar/core": "^4.4.2",
+    "@fullcalendar/daygrid": "^4.4.2",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.5.2",
+    "critical": "^2.0.4",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "fstream": ">=1.0.12",
     "github-syntax-light": "^0.5.0",
-    "ionicons": "^4.5.8",
+    "ionicons": "^4.6.3",
     "kind-of": ">=6.0.3",
-    "lightbox2": "^2.11.1",
-    "lodash": ">=4.17.13",
+    "lightbox2": "^2.11.3",
+    "lodash": "^4.17.20",
     "minimist": ">=1.2.3",
     "mixin-deep": ">=1.3.2",
     "normalize.css": "^8.0.1",
     "owl.carousel2": "^2.2.1",
-    "postcss-cli": "^7.1.1",
+    "postcss-cli": "^7.1.2",
     "postcss-remove-unused-css": "^1.0.4",
     "postcss-uncss": "^0.16.1",
     "scss-powertools": "^1.2.1",
-    "serialize-javascript": ">=2.1.1",
-    "set-value": ">=2.0.1",
-    "serialize-javascript": ">=2.1.1",
-    "set-value": ">=2.0.1",
+    "serialize-javascript": "^5.0.1",
+    "set-value": "^3.0.2",
     "uncss": "^0.16.2",
     "url-loader": "^1.1.2",
-    "venobox": "^1.8.5"
+    "venobox": "^1.9.1"
   }
 }
