Layout fixes for mobile

--- a/config.toml
+++ b/config.toml
@@ -110,7 +110,7 @@ inst_access = ""
   disableCSS = false
   disableHTML = false
   disableJS = false
-  disableJSON = true
+  disableJSON = false
   disableSVG = false
   disableXML = false
   minifyOutput = false
