--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fullcalendar/daygrid": "^4.4.2",
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "animate.css": "^3.7.2",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^5.0.0-beta1",
     "critical": "^2.0.6",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
