Feat/add fabio (#34)
* fix: missing space between the words 'each other'

* feat: add Fabio to the team

* chore: remove duplicated information referring to the wrong person

Co-authored-by: Fábio Paiva <fabio@skyworkz.nl>

--- a/data/team.yml
+++ b/data/team.yml
@@ -31,13 +31,6 @@ members:
       Next to his daily job at [Dataworkz](https://dataworkz.nl) as a Managing Director, Bas is an advisor
       to Skyworkz. With his strong
       company.
-      
-
-      In his spare time, Martin is a fanatic board gamer. You can see him regularly on board game nights
-      in Utrecht.
-
-
-      You can find him on [Linkedin](https://linkedin.com/in/martin-weidner-b52455).
   - category: Management
     image: "martin.jpg"
     name: Martin Weidner
@@ -151,3 +144,16 @@ members:
       Cloud Engineer | Saxophonist | Snowboarding Fanatic | Craft Beer Snob
     description: >
       After having worked at KPMG for several years, where he was heavily involved in building the Digital Risk Platform, Tom joined Skyworkz as a Cloud Engineer. He knows a lot about Azure, DevOps and Data Engineering.
+  - category: Engineering
+    image: "fabiopaiva.jpg"
+    name: Fabio Paiva
+    teaser: >
+      Cloud Developer | Guitar player | Father of 2
+    description: >
+      Fábio is a hands-on Cloud Developer with a strong background in AWS, Terraform and Serverless.
+
+
+      In his spare time he likes to play guitar and have fun with his kids.
+
+      
+      You can find Fábio on [LinkedIn](https://linkedin.com/in/fabio-dev).
