--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "popper.js": "^1.16.1",
-    "webpack": "^4.44.2"
+    "webpack": "^5.60.0"
   },
   "devDependencies": {
     "@fullcalendar/core": "^4.4.2",
     "@fullcalendar/daygrid": "^4.4.2",
-    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "animate.css": "^3.7.2",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^5.1.3",
     "critical": "^2.0.6",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
@@ -26,19 +26,19 @@
     "ionicons": "^4.6.3",
     "kind-of": ">=6.0.3",
     "lightbox2": "^2.11.3",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "minimist": ">=1.2.3",
     "mixin-deep": ">=1.3.2",
     "normalize.css": "^8.0.1",
-    "owl.carousel2": "^2.2.1",
+    "owl.carousel2": "^2.2.2",
     "postcss-cli": "^7.1.2",
     "postcss-remove-unused-css": "^1.0.4",
     "postcss-uncss": "^0.16.1",
-    "scss-powertools": "^1.2.1",
+    "scss-powertools": "^3.2.0",
     "serialize-javascript": "^5.0.1",
-    "set-value": "^3.0.2",
-    "uncss": "^0.16.2",
+    "set-value": "^4.1.0",
+    "uncss": "^0.17.3",
     "url-loader": "^1.1.2",
-    "venobox": "^1.9.1"
+    "venobox": "^1.9.3"
   }
 }
