Updated teaser text

--- a/config.toml
+++ b/config.toml
@@ -31,8 +31,8 @@ inst_access = ""
   header = "Skyworkz"
 
   [params.hero]
-    title = "Cloud development for fast-growing companies." 
-    subtitle = "We help start-ups and scale-ups leverage cloud technology - whether it's developing cloud native applications, increasing developer productivity or building reliable cloud platforms."
+    title = "Cloud Accelerator for fast-growing companies." 
+    subtitle = "We accelerate the cloud journey of start-ups and scale-ups - whether it's developing cloud native applications, increasing developer productivity or building reliable cloud platforms."
 
   [params.about]
     title = "We scale your business in the cloud."
