--- a/data/team.yml
+++ b/data/team.yml
@@ -157,3 +157,10 @@ members:
 
       
       You can find Fábio on [LinkedIn](https://linkedin.com/in/fabio-dev).
+  - category: Engineering
+    image: "william.jpeg"
+    name: William van den Bosch
+    teaser: >
+      Software Engineer | Gamer | Game Developer | Dog Lover
+    description: >
+      William is an experienced Software Engineer with a broad set of knowledge. Specialized in Cloud Native development and architectures. You will find him playing and developing games into the late night hours.
