Fix spelling mistake

--- a/data/team.yml
+++ b/data/team.yml
@@ -136,7 +136,7 @@ members:
     teaser: >
       Cloud Engineer | Cryptocurrencies Fan | Bass and guitar player | Craft Beer Snob
     description: >
-      Julio is hands-on Azure Architect-Enginneer highly experienced in MS Technologies and in the last years, working hard with AKS in Azure.
+      Julio is hands-on Azure Architect-Engineer highly experienced in MS Technologies and in the last years, working hard with AKS in Azure.
   - category: Engineering
     image: "tomkennes.jpg"
     name: Tom Kennes
