--- a/data/team.yml
+++ b/data/team.yml
@@ -92,9 +92,13 @@ members:
     image: "benny.jpg"
     name: Benny Cornelissen
     teaser: >
-      Builder of Clouds | Cyclist | RCC 17096 | Guitar player
+      Cloud Consultant | That Terraform Guy | Cyclist | Guitar Snob
     description: >
-      Benny has many years of experience designing and building secure, reliable and scalable platforms that are easy to use.
+      Benny has been architecting and building platforms for years, going from putting datacenters into containers to putting containers in datacenters, to large-scale cloud platforms. Today, he prefers to take on multi-faceted roles in platform organizations. Need a cloud architect that also knows how to actually build it? Who can spar with managers? Give presentations? Someone who can explain complex Kubernetes scheduling issues by talking about boats and boxes? Benny might be the person you need.
+
+      When Benny isn't working, he's usually riding bikes, or playing guitar.
+
+      You can find Benny on [LinkedIn](https://www.linkedin.com/in/bennycornelissen). He also has his own [blog](https://blog.bennycornelissen.nl/).
   - category: Engineering
     image: "maarten.jpg"
     name: Maarten Dirkse
