--- a/data/team.yml
+++ b/data/team.yml
@@ -181,3 +181,11 @@ members:
       
       
       Whenever he's not sitting behind a computer, he's probably outside, on a bike, or just walking the dog.
+  - category: Engineering
+    image: "ryan.jpg"
+    name: "Ryan Susana"
+    teaser: Cloud Engineer | Software Architect | Google Fanatic | Piano Lover
+    description: >
+      Ryan is an enthusiastic software craftsman, who has been been going at it for over a decade. With a passion for IT and a cloud-native mindset, he empowers businesses to get the most out of their software and engineering teams.
+      
+      Software aside, you can find Ryan: playing chess, cooking up a creative meal, listening to hip-hop/reggae, or creating music of his own.
