--- a/data/team.yml
+++ b/data/team.yml
@@ -64,7 +64,7 @@ members:
     image: "sander.jpg"
     name: Sander Knape
     teaser: >
-      Cloud Engineer | Gin-Tonic snob | Blogger
+      Cloud Engineer | Blogger
     description: >
       As a Cloud Engineer, I love improving productivity and efficiency through automation. He's a
       strong advocate for “everything in code”. It’s his strength to look ahead, and to define solid
@@ -78,7 +78,7 @@ members:
     image: "mikhail.jpg"
     name: Mikhail Vaysman
     teaser: >
-      Cloud Developer | Beer snob | Boardgame geek
+      Cloud Developer | Boardgame geek
     description: >
       Mikhail is a polyglot cloud developer, focused on building cloud-native business applications.
   - category: Engineering
@@ -117,14 +117,14 @@ members:
     image: "julio.jpg"
     name: Julio Rosua
     teaser: >
-      Cloud Engineer | Cryptocurrencies Fan | Bass and guitar player | Craft Beer Snob
+      Cloud Engineer | Cryptocurrencies Fan | Bass and guitar player
     description: >
       Julio is hands-on Azure Architect-Engineer highly experienced in MS Technologies and in the last years, working hard with AKS in Azure.
   - category: Engineering
     image: "tomkennes.jpg"
     name: Tom Kennes
     teaser: >
-      Cloud Engineer | Saxophonist | Snowboarding Fanatic | Craft Beer Snob
+      Cloud Engineer | Saxophonist | Snowboarding Fanatic
     description: >
       After having worked at KPMG for several years, where he was heavily involved in building the Digital Risk Platform, Tom joined Skyworkz as a Cloud Engineer. He knows a lot about Azure, DevOps and Data Engineering.
   - category: Engineering
@@ -153,19 +153,19 @@ members:
     teaser: >
       Cloud Engineer | Trainer | Reader
     description: >
-      Ahmed is an experienced DevOps and cloud engineer. He works with AWS as the main cloud platform. He has experience with IaC tools, CI/CD and automation stuff in general. 
+      Ahmed is an experienced DevOps and cloud engineer. He works with AWS as the main cloud platform. He has experience with IaC tools, CI/CD and automation stuff in general.
   - category: Engineering
     image: "lee.jpg"
     name: Lee Beenen
     teaser: >
       Cloud Engineer | Software Developer | Cyclist | Runner | Dog Enthousiast
     description: >
-      Lee has been working with Microsoft technologies for his entire professional career, implementing, maintaining, supporting and developing a host of mission-critical software. 
-      
+      Lee has been working with Microsoft technologies for his entire professional career, implementing, maintaining, supporting and developing a host of mission-critical software.
 
-      He has joined Skyworkz eager to expand and utilize his growing Azure experience in addition to years of experience in CI/CD. 
-      
-      
+
+      He has joined Skyworkz eager to expand and utilize his growing Azure experience in addition to years of experience in CI/CD.
+
+
       Whenever he's not sitting behind a computer, he's probably outside, on a bike, or just walking the dog.
   - category: Engineering
     image: "ryan.jpg"
@@ -173,5 +173,5 @@ members:
     teaser: Cloud Engineer | Software Architect | Google Fanatic | Piano Lover
     description: >
       Ryan is an enthusiastic software craftsman, who has been been going at it for over a decade. With a passion for IT and a cloud-native mindset, he empowers businesses to get the most out of their software and engineering teams.
-      
+
       Software aside, you can find Ryan: playing chess, cooking up a creative meal, listening to hip-hop/reggae, or creating music of his own.
