--- a/data/careers.yml
+++ b/data/careers.yml
@@ -11,46 +11,46 @@ profiles:
 
       #### About us
 
-      Skyworks is a boutique consultancy with a focus on cloud based in Utrecht.
-      We are a diverse group of cloud consultants, who like to **share knowledge** and 
+      Skyworkz is a boutique consultancy with a focus on cloud based in Utrecht.
+      We are a diverse group of cloud consultants, who like to **share knowledge** and
       work on interesting projects. Technology is not only our work but also our
       passion. But a **healthy work/life balance** is important as well.
 
       #### About the role
 
       We are looking for cloud consultants who want to make a difference. Instead
-      of just staffing projects, we closely look to your skills, experience and 
+      of just staffing projects, we closely look to your skills, experience and
       ambition, and try to match that with a **challenging assignment**. The projects
       vary in length between 3 to 18 months. We always help customers with the end in
       mind: after the project, the client needs to be able to stand on his own feet.
 
       #### About you
 
-      You are **passionate** about building scalable and reliable cloud platforms for 
+      You are **passionate** about building scalable and reliable cloud platforms for
       developers. In your work, you constantly **balance pragmatism and quality**. You're
-      not a ticket ticker but a builder and a teamplayer. You are able to translate 
-      business requirements into practical architecture. You are able to communicate the 
-      advantages of the cloud to both business and techies. 
+      not a ticket ticker but a builder and a teamplayer. You are able to translate
+      business requirements into practical architecture. You are able to communicate the
+      advantages of the cloud to both business and techies.
 
-      
+
       Next to that, you're a polyglot **developer/scripter** and would almost call yourself
       a programmer. But writing business code is less interesting to you, you like to bridge
       the gap between code and infrastructure. You are a problem solver. There is no type of
       infrastructure that you haven't **automated**, no application that you haven't
-      **containerized**. You are allergic to the word **DevOps**: another inflated buzzword. 
+      **containerized**. You are allergic to the word **DevOps**: another inflated buzzword.
       It's all about **collaboration, communication and automation**. No need for buzzwords.
-      
+
       #### Good to know
 
-      We expect you to be a consultant: you shape your own assignment, you are entrepreneurial 
+      We expect you to be a consultant: you shape your own assignment, you are entrepreneurial
       and you're **not afraid** of new environments. You have been in the Netherlands for more than
       a year already, so you are familiar with the Dutch culture and way of working.
 
       #### Benefits
-      
+
       We offer you the usual stuff: a nice salary with a yearly performance bonus, a mobility
       budget or a lease car, a laptop of your own choice and a generous training budget. But next to
-      that we offer you an environment in which you can learn, both as a professional and as a 
+      that we offer you an environment in which you can learn, both as a professional and as a
       person. And last but not least, we offer you the chance to shape the culture of a young and
       growing consultancy.
 
@@ -60,48 +60,47 @@ profiles:
 
       #### About us
 
-      Skyworks is a boutique consultancy with a focus on cloud based in Utrecht.
-      We are a diverse group of cloud consultants, who like to **share knowledge** and 
+      Skyworkz is a boutique consultancy with a focus on cloud based in Utrecht.
+      We are a diverse group of cloud consultants, who like to **share knowledge** and
       work on interesting projects. Technology is not only our work but also our
       passion. But a **healthy work/life balance** is important as well.
 
       #### About the role
 
       We are looking for cloud consultants who want to make a difference. Instead
-      of just staffing projects, we closely look to your skills, experience and 
+      of just staffing projects, we closely look to your skills, experience and
       ambition, and try to match that with a **challenging assignment**. The projects
       vary in length between 3 to 18 months. We always help customers with the end in
       mind: after the project, the client needs to be able to stand on his own feet.
 
       #### About you
 
-      You are a seasoned **craftsman** with a passion for programming. You love to 
+      You are a seasoned **engineer** with a passion for programming. You love to
       gather requirements from the business and translate them into actionable backlog items.
       You are able to **architect** and write software that is born for the cloud. You are
       the go-to person when it comes to cloud. There is no cloud service that you don't know off.
-      You're a **polyglot** Programmer (Java, Scala, Javacript/Typescript, Go, Python), and 
+      You're a **polyglot** Programmer (Java, Scala, Javacript/Typescript, Go, Python), and
       constantly updating yourself with the latest and greatest languages. We expect you to be
       a seasoned **VIM** user (just kidding, Emacs or VS Code is also fine). And last but not least,
       you are allergic to the words DevOps and Agile. **You just get shit done**: you build it you run it.
 
 
       You have developed web applications **at scale** using containers or serverless technologies on public
-      cloud providers. You know what **event sourcing** and eventual consistency is. You are able to split up 
-      complex monoliths into separate **microservices** (and no, a microservices is NOT just a containerized 
-      application...). You focus on the **full stack**, not only on features. If there is a way to optimize 
+      cloud providers. You know what **event sourcing** and eventual consistency is. You are able to split up
+      complex monoliths into separate **microservices** (and no, a microservices is NOT just a containerized
+      application...). You focus on the **full stack**, not only on features. If there is a way to optimize
       the software delivery pipeline, you're the first to jump on it.
 
       #### Good to know
 
-      We expect you to be a consultant: you shape your own assignment, you are entrepreneurial 
+      We expect you to be a consultant: you shape your own assignment, you are entrepreneurial
       and you're **not afraid** of new environments. You have been in the Netherlands for more than
       a year already, so you are familiar with the Dutch culture and way of working.
 
       #### Benefits
-      
+
       We offer you the usual stuff: a nice salary with a yearly performance bonus, a mobility
       budget or a lease car, a laptop of your own choice and a generous training budget. But next to
-      that we offer you an environment in which you can learn, both as a professional and as a 
+      that we offer you an environment in which you can learn, both as a professional and as a
       person. And last but not least, we offer you the chance to shape the culture of a young and
       growing consultancy.
-      
