--- a/config.toml
+++ b/config.toml
@@ -94,7 +94,7 @@ inst_access = ""
       button = "Send message"
     [params.contact.box]
       title = "Stop by for a visit"
-      address = "Tractieweg 41 studio N, 3534AP, Utrecht, The Netherlands"
+      address = "Tractieweg 41 Studio E, 3534AP, Utrecht, The Netherlands"
       email = "Email: info@skyworkz.nl"
       phone = "Phone: +31 30 899 3320"
     [params.contact.gmaps]
