Added Nidhi's resume

--- a/data/team.yml
+++ b/data/team.yml
@@ -175,3 +175,9 @@ members:
       Ryan is an enthusiastic software craftsman, who has been been going at it for over a decade. With a passion for IT and a cloud-native mindset, he empowers businesses to get the most out of their software and engineering teams.
 
       Software aside, you can find Ryan: playing chess, cooking up a creative meal, listening to hip-hop/reggae, or creating music of his own.
+  - category: Engineering
+    image: "nidhi.jpg"
+    name: "Nidhi Sharma"
+    teaser: Cloud Engineer | Digital Artist | Otaku
+    description: >
+      Nidhi has mid-level experience in deploying applications and managing infrastructure on AWS. Her forte is configuring CDNs and web servers for complex content delivery scenarios. Currently paving her path to learn infrastructure automation, discover new CI/CD tools and understand the best practices to implement different architectural patterns.\n\n In her spare time, she loves watching animes or cartoons. On weekends you would find her creating interior designs, working on digital artworks or playing RPG games like Tomb Raider, Assassin's Creed, Indie survival or horror games on her laptop.
