--- a/data/team.yml
+++ b/data/team.yml
@@ -180,4 +180,10 @@ members:
     name: "Nidhi Sharma"
     teaser: Cloud Engineer | Digital Artist | Otaku
     description: >
-      Nidhi has mid-level experience in deploying applications and managing infrastructure on AWS. Her forte is configuring CDNs and web servers for complex content delivery scenarios. Currently paving her path to learn infrastructure automation, discover new CI/CD tools and understand the best practices to implement different architectural patterns.\n\n In her spare time, she loves watching animes or cartoons. On weekends you would find her creating interior designs, working on digital artworks or playing RPG games like Tomb Raider, Assassin's Creed, Indie survival or horror games on her laptop.
+      Nidhi is experienced in deploying applications and managing infrastructure on AWS. Her forte is configuring CDNs and web servers for complex content delivery scenarios. She is paving her path to learn infrastructure automation, discovering new CI/CD tools and understanding the best practices to implement different architectural patterns.
+
+
+      In her spare time, she loves watching animes and cartoons. On weekends you would find her creating interior designs, working on digital artworks or playing RPG games like Tomb Raider, Indie survival or horror games.
+
+
+      You can find Nidhi on [LinkedIn](https://linkedin.com/in/ns-lookup).
