Feat/add nidhi (#63)
* Added Nidhi's resume

* added photo

--- a/data/team.yml
+++ b/data/team.yml
@@ -175,3 +175,15 @@ members:
       Ryan is an enthusiastic software craftsman, who has been been going at it for over a decade. With a passion for IT and a cloud-native mindset, he empowers businesses to get the most out of their software and engineering teams.
 
       Software aside, you can find Ryan: playing chess, cooking up a creative meal, listening to hip-hop/reggae, or creating music of his own.
+  - category: Engineering
+    image: "nidhi.jpg"
+    name: "Nidhi Sharma"
+    teaser: Cloud Engineer | Digital Artist | Otaku
+    description: >
+      Nidhi is experienced in deploying applications and managing infrastructure on AWS. Her forte is configuring CDNs and web servers for complex content delivery scenarios. She is paving her path to learn infrastructure automation, discovering new CI/CD tools and understanding the best practices to implement different architectural patterns.
+
+
+      In her spare time, she loves watching animes and cartoons. On weekends you would find her creating interior designs, working on digital artworks or playing RPG games like Tomb Raider, Indie survival or horror games.
+
+
+      You can find Nidhi on [LinkedIn](https://linkedin.com/in/ns-lookup).
