--- a/data/team.yml
+++ b/data/team.yml
@@ -187,3 +187,12 @@ members:
 
 
       You can find Nidhi on [LinkedIn](https://linkedin.com/in/ns-lookup).
+
+  - category: Engineering
+    image: "dries.jpg"
+    name: "Dries Schulten"
+    teaser: "Cloud Developer | Guitar player | Runner"
+    description: >
+      Dries is a seasoned developer who likes to solve hard technical problems as well as figuring out how to assist the business to solve their challenges, preferably with a team. Always on the lookout to learn new things, he hopes his solutions will contribute to a better world.
+
+      In his free time he likes to play guitars or go out for a run.
