--- a/data/team.yml
+++ b/data/team.yml
@@ -71,11 +71,16 @@ members:
     image: "benny.jpg"
     name: Benny Cornelissen
     teaser: >
-      Cloud Consultant | That Terraform Guy | Cyclist | Guitar Snob
+      Cloud Consultant | Cyclist | Guitarist
     description: >
-      Benny has been architecting and building platforms for years, going from putting datacenters into containers to putting containers in datacenters, to large-scale cloud platforms. Today, he prefers to take on multi-faceted roles in platform organizations. Need a cloud architect that also knows how to actually build it? Who can spar with managers? Give presentations? Someone who can explain complex Kubernetes scheduling issues by talking about boats and boxes? Benny might be the person you need.
+      Benny has been architecting and building platforms for nearly 2 decades, going from putting datacenters into containers to putting containers in datacenters, to large-scale cloud platforms. 
+      
 
-      When Benny isn't working, he's usually riding bikes, or playing guitar.
+      Today, he prefers to take on multi-faceted roles in software delivery organizations, being a hybrid of strategist, advisor, architect, engineer, and trainer. 
+
+
+      When Benny isn't working, he's usually riding bikes, or playing guitars.
+
 
       You can find Benny on [LinkedIn](https://www.linkedin.com/in/bennycornelissen). He also has his own [blog](https://blog.bennycornelissen.nl/).
   - category: Engineering
