add convenient VSCode plugins to gitpod config

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,3 +13,6 @@ ports:
 vscode:
   extensions:
     - eliostruyf.vscode-front-matter
+    - bungcip.better-toml
+    - budparr.language-hugo-vscode
+    - ms-azuretools.vscode-docker
