--- a/data/alumni.yml
+++ b/data/alumni.yml
@@ -10,7 +10,7 @@ members:
     teaser: >
       Cloud Engineer | Home automator | World traveller
     description: >
-      Timothy likes to build scalable cloud platforms. And he's really good at it.
+      Tim was one of our earliest Cloud Engineers, but also a Mario Kart Legend.
   - category: Engineering
     image: "andy.jpg"
     name: Andy Gordon
@@ -45,7 +45,7 @@ members:
     teaser: >
       Cloud Engineer | Cryptocurrencies Fan | Bass and guitar player
     description: >
-      Julio is hands-on Azure Architect-Engineer highly experienced in MS Technologies and in the last years, working hard with AKS in Azure.
+      Julio joined us as our first Azure specialist and made a lasting impression as our resident crypto guru. He's also still the main bass player at our jam sessions.
   - category: Engineering
     image: "william.jpeg"
     name: William van den Bosch
