--- a/data/team.yml
+++ b/data/team.yml
@@ -142,7 +142,7 @@ members:
 
       Whenever he's not sitting behind a computer, he's probably outside, on a bike, or just walking the dog.
   - category: Engineering
-    image: "ryan.jpg"
+    image: "ryan.png"
     name: "Ryan Susana"
     teaser: Cloud Engineer | Software Architect | Google Fanatic | Piano Lover
     description: >
