fix typo in Bas description and update family status

--- a/data/team.yml
+++ b/data/team.yml
@@ -16,7 +16,7 @@ members:
       knowledge of Cloud and DevOps, and is always in for a good technical discussion.
 
 
-      In his spare time he likes to spend time with is son Sem, he loves skiing and traveling, and
+      In his spare time he likes to spend time with his family, he loves skiing and traveling, and
       he is an occasional sporter (road cycling and mountainbiking in the summer, ice skating in the
       winter).
 
