Added Robert to the team

--- a/data/team.yml
+++ b/data/team.yml
@@ -180,3 +180,16 @@ members:
 
 
       Aside from software, she enjoys recharging outdoors and discovering new hobbies, from cycling to dance classes.
+
+  - category: Engineering
+    image: "robert.jpg"
+    name: "Robert Czanik"
+    teaser: "Machine Learning Engineer | Full Stack Data Scientist | Braai master | Former astronomer "
+    description: >
+      Robert has a strong background in the hard sciences and is a seasoned data science professional. He is passionate about everything data related, from Postgres databasis, deep learning models to everything that build, deploys or shows the value in data.
+
+
+      If Robert is not busy working he is an avid gamer, enjoys the outdoors and crazy about anything with optics: Cameras or telescopes. He is a braai enthousiast, willing to braai any time.
+
+
+      You can find Robert on [LinkedIn](https://www.linkedin.com/in/rjczanik/).
