--- a/data/team.yml
+++ b/data/team.yml
@@ -186,7 +186,7 @@ members:
     name: "Robert Czanik"
     teaser: "Machine Learning Engineer | Full Stack Data Scientist | Braai master | Former astronomer "
     description: >
-      Robert has a strong background in the hard sciences and is a seasoned data science professional. He is passionate about everything data related, from Postgres databasis, deep learning models to everything that build, deploys or shows the value in data.
+      Robert has a strong background in the hard sciences and is a seasoned data science professional. He is passionate about everything data related, from Postgres databases, deep learning models to everything that build, deploys or shows the value in data.
 
 
       If Robert is not busy working he is an avid gamer, enjoys the outdoors and crazy about anything with optics: Cameras or telescopes. He is a braai enthousiast, willing to braai any time.
