Add myself to the team page.

--- a/data/team.yml
+++ b/data/team.yml
@@ -193,3 +193,14 @@ members:
 
 
       You can find Robert on [LinkedIn](https://www.linkedin.com/in/rjczanik/).
+
+  - category: Engineering
+    image: florian.jpg
+    name: Florian Vorenkamp
+    teaser: Cloud Developer | Software Developer | Outdoorsy | Books | Gamer | Father of 2
+    description: |-
+      With over a decade of experience in software engineering Florian has a passion for making things easier for others.
+
+      In his free time he enjoys playing Minecraft with his kids, boardgames, reading books and enjoying the outdoors.
+
+      You can find Florian on [LinkedIn](https://www.linkedin.com/in/florian-vorenkamp/).
